change some directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 # Define your standard CMake header (for example):
 cmake_minimum_required(VERSION 3.5)
-include(${CMAKE_CURRENT_SOURCE_DIR}/pd.build/pd.cmake)
+include(${CMAKE_CURRENT_SOURCE_DIR}/Resources/pd.build/pd.cmake)
 
 project(perceptron-object)
 
@@ -31,7 +31,7 @@ set_target_properties(gsl PROPERTIES POSITION_INDEPENDENT_CODE ON)
 #│             Pd External              │
 #╰──────────────────────────────────────╯
 # Get all cpp files inside ${CMAKE_SOURCE_DIR}/Sources/ and add them to the project
-file(GLOB EXTERNAL_SOURCES "${CMAKE_SOURCE_DIR}/*.c")
+file(GLOB EXTERNAL_SOURCES "${CMAKE_SOURCE_DIR}/Sources/*.c")
 add_pd_external(perceptron-object perceptron ${EXTERNAL_SOURCES})
 
 
