--- a/.github/workflows/c.yml
+++ b/.github/workflows/c.yml
@@ -76,3 +76,21 @@ jobs:
         with:
           name: ${{ env.LIBNAME }}-linux-${{matrix.arch}}-${{matrix.precision}}
           path: Binaries
+
+package-artifacts:
+    needs: [macos-universal-build, windows-build, linux-build]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download artifacts
+        uses: actions/download-artifact@v4
+        with:
+          pattern: '${{ env.LIBNAME }}-*'
+          path: artifacts
+          merge-multiple: true
+      - name: Clear tmp files
+        run: rm -f artifacts/*.pdb
+      - name: Upload artifacts zip
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{env.LIBNAME}}-ALL-binaries
+          path: artifacts
