--- a/.github/workflows/c.yml
+++ b/.github/workflows/c.yml
@@ -61,7 +61,7 @@ jobs:
       - name: Upload
         uses: actions/upload-artifact@v3
         with:
-          name: perceptron-macos-${{ matrix.arch }}-${{ matrix.precision }}
+          name: perceptron-windows-${{ matrix.arch }}-${{ matrix.precision }}
           path: Binaries
   linux-build:
     runs-on: ubuntu-latest
@@ -86,5 +86,5 @@ jobs:
       - name: Upload Object
         uses: actions/upload-artifact@v3
         with:
-          name: perceptron-macos-${{ matrix.arch }}-${{ matrix.precision }}
+          name: perceptron-linux-${{ matrix.arch }}-${{ matrix.precision }}
           path: Binaries
