--- a/.github/workflows/c.yml
+++ b/.github/workflows/c.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Build Object
         run: |
           cmake . -B build
-          cmake --build build
+          cmake --build build -j $(sysctl -n hw.logicalcpu)
       - name: Upload Object
         uses: actions/upload-artifact@v3
         with:
@@ -56,7 +56,7 @@ jobs:
         shell: msys2 {0}
         run: |
           cmake . -B build
-          cmake --build build
+          cmake --build build -j $(sysctl -n hw.logicalcpu)
           rm perceptron/*.a
       - name: Upload
         uses: actions/upload-artifact@v3
@@ -82,7 +82,7 @@ jobs:
       - name: Build Object
         run: |
           cmake . -B build
-          cmake --build build
+          cmake --build build -j $(sysctl -n hw.logicalcpu)
       - name: Upload Object
         uses: actions/upload-artifact@v3
         with:
