--- a/.github/workflows/c.yml
+++ b/.github/workflows/c.yml
@@ -20,14 +20,10 @@ jobs:
       - name: Install PureData and Deps
         run: |
           brew install --cask pd
-      - name: Clone gsl
-        run: 
-          git init
-          git submodule add https://github.com/ampl/gsl   gsl
       - name: Build Object
         run: |
           cmake . -B build
-          cmake --build build -j $(sysctl -n hw.logicalcpu)
+          cmake --build build -j 4
       - name: Upload Object
         uses: actions/upload-artifact@v3
         with:
@@ -56,15 +52,11 @@ jobs:
         run: |
           choco install puredata --yes
       - if: runner.os == 'Windows'
-      - name: Clone gsl
-        run:
-          git init
-          git submodule add https://github.com/ampl/gsl   gsl
       - name: Build Object
         shell: msys2 {0}
         run: |
           cmake . -B build
-          cmake --build build -j $(sysctl -n hw.logicalcpu)
+          cmake --build build -j 4
           rm perceptron/*.a
       - name: Upload
         uses: actions/upload-artifact@v3
@@ -87,14 +79,10 @@ jobs:
           sudo apt-get update
           sudo add-apt-repository ppa:pure-data/pure-data -y
           sudo apt-get install puredata -y
-      - name: Clone gsl
-        run: 
-          git init
-          git submodule add https://github.com/ampl/gsl   gsl
       - name: Build Object
         run: |
           cmake . -B build
-          cmake --build build -j $(sysctl -n hw.logicalcpu)
+          cmake --build build -j 4
       - name: Upload Object
         uses: actions/upload-artifact@v3
         with:
