--- a/.github/workflows/c.yml
+++ b/.github/workflows/c.yml
@@ -1,4 +1,3 @@
-
 name: C/C++ CI
 on:
   push:
@@ -8,10 +7,6 @@ on:
 jobs:
   macos-universal-build:
     runs-on: macos-latest
-    strategy:
-      matrix:
-        arch: ["x86", "x64"]
-        precision: ["single", "double"]
     steps:
       - uses: actions/checkout@v4
         with:
@@ -27,14 +22,10 @@ jobs:
       - name: Upload Object
         uses: actions/upload-artifact@v3
         with:
-          name: perceptron-macos-${{ matrix.arch }}-${{ matrix.precision }}
-          path: Binaries
+          name: perceptron
+          path: perceptron
   windows-build:
     runs-on: windows-latest
-    strategy:
-      matrix:
-        arch: ["x86", "x64"]
-        precision: ["single", "double"]
     steps:
       - uses: actions/checkout@v4
         with:
@@ -52,7 +43,7 @@ jobs:
         run: |
           choco install puredata --yes
       - if: runner.os == 'Windows'
-      - name: Build Object
+        name: Build Object
         shell: msys2 {0}
         run: |
           cmake . -B build
@@ -61,14 +52,10 @@ jobs:
       - name: Upload
         uses: actions/upload-artifact@v3
         with:
-          name: perceptron-windows-${{ matrix.arch }}-${{ matrix.precision }}
-          path: Binaries
+          name: perceptron
+          path: perceptron
   linux-build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        arch: ["x86", "x64"]
-        precision: ["single", "double"]
     steps:
       - uses: actions/checkout@v3
         with:
@@ -86,5 +73,5 @@ jobs:
       - name: Upload Object
         uses: actions/upload-artifact@v3
         with:
-          name: perceptron-linux-${{ matrix.arch }}-${{ matrix.precision }}
-          path: Binaries
+          name: perceptron
+          path: perceptron
