--- a/.github/workflows/c.yml
+++ b/.github/workflows/c.yml
@@ -24,6 +24,9 @@ jobs:
           brew install --cask pd
           # Add here dynamic libraries that you use (ex. fftw3, gsl, ...).
           # Search for the name in https://brew.sh/
+      - name: Install Gsl
+        run: 
+         git submodule add https://github.com/ampl/gsl   gsl     
       - name: Build Object for Arm
         if: ${{ matrix.arch == 'arm64' }}
         run: |
